[workspace]
resolver = "2"
members = [
  "crates/async-dropper",
  "crates/async-dropper-derive",
  "crates/async-dropper-simple",
]

[workspace.dependencies]
anyhow = "1.0.87"
async-scoped = "0.9.0"
async-std = "1.12.0"
async-trait = "0.1.74"
futures = "0.3.28"
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = "2.0.38"
tokio = "1.33.0"
uuid = "1.10.0"
