[package]
name = "async-dropper-derive"
version = "0.2.4"
repository = "https://github.com/t3hmrman/async-dropper"
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.70"
authors = [
  "vados <vados@vadosware.io>",
]
categories = [
  "asynchronous",
]
description = """
The derive macro crate that supplies the implementation for AsyncDrop
"""

[lib]
proc-macro = true

[features]
default = []
tokio = ["dep:tokio" ]
async-std = ["dep:async-std" ]

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
async-std = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[package.metadata.docs.rs]
all-features = false
no-default-features = true
features = ["tokio"]
