[package]
name = "async-dropper-simple"
version = "0.0.1"
repository = "https://github.com/t3hmrman/async-dropper"
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.70"
authors = [
  "vados <vados@vadosware.io>",
]
categories = [
  "asynchronous",
]
description = """
A simple struct-wrapper (i.e. AsyncDropper<T>) based implementation of AsyncDrop
"""

[[example]]
name = "async-drop-simple"
path = "../../examples/async_drop_simple.rs"
crate-type = [ "bin" ]
required-features = [ "tokio" ]

[features]
defaults = ["tokio"]
tokio = ["dep:tokio"]
async-std = ["dep:async-std"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
async-std = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
futures.workspace = true
async-trait.workspace = true
async-dropper-derive.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = [ "time", "macros", "rt", "rt-multi-thread" ]}