[package]
name = "async-dropper-simple"
version = "0.2.5"
repository = "https://github.com/t3hmrman/async-dropper"
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.70"
authors = ["vados <vados@vadosware.io>"]
categories = ["asynchronous"]
description = """
A simple struct-wrapper (i.e. AsyncDropper<T>) based implementation of AsyncDrop
"""

[features]
default = []
tokio = ["dep:tokio", "dep:async-scoped", "async-scoped/use-tokio"]
async-std = ["dep:async-std",  "dep:async-scoped", "async-scoped/use-async-std"]

[dependencies]
async-std = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = [
  "time",
  "rt",
  "rt-multi-thread",
] }
futures.workspace = true
async-trait.workspace = true
async-scoped = { workspace = true, optional = true }

[build-dependencies]
rustc_version = "0.4.0"

[dev-dependencies]
async-std = { workspace = true, features = ['attributes'] }
tokio = { workspace = true, features = [
  "time",
  "macros",
  "rt",
  "rt-multi-thread",
] }

[package.metadata.docs.rs]
all-features = false
no-default-features = true
features = ["tokio"]
