[package]
name = "async-dropper"
version = "0.2.1"
repository = "https://github.com/t3hmrman/async-dropper"
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.70"
authors = [
  "vados <vados@vadosware.io>",
]
categories = [
  "asynchronous",
]
description = """
The least-worst ad-hoc implementation of AsyncDrop as a Derive macro
"""

[[example]]
name = "async-drop-tokio"
path = "../../examples/async_drop_tokio.rs"
crate-type = [ "bin" ]
required-features = [ "tokio" ]

[[example]]
name = "async-drop-async-std"
path = "../../examples/async_drop_async_std.rs"
crate-type = [ "bin" ]
required-features = [ "async-std" ]

[[example]]
name = "async-drop-simple-tokio"
path = "../../examples/async_drop_simple_tokio.rs"
crate-type = [ "bin" ]
required-features = [ "tokio" ]

[[example]]
name = "async-drop-simple-async-std"
path = "../../examples/async_drop_simple_async_std.rs"
crate-type = [ "bin" ]
required-features = [ "async-std" ]

[features]
default = []
tokio = ["dep:tokio", "async-dropper-derive/tokio", "async-dropper-simple/tokio"]
async-std = ["dep:async-std", "async-dropper-derive/async-std", "async-dropper-simple/async-std"]

[dependencies]
async-std = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = [ "rt", "rt-multi-thread" ] }
futures.workspace = true
async-trait.workspace = true
# NOTE: version has to be removed if doing local dev with unpublished versions
# cargo does *not* ignore the version and opt for path
async-dropper-derive = { path = "../async-dropper-derive", version = "0.2.4" }
async-dropper-simple = { path = "../async-dropper-simple", version = "0.2.3" }

[dev-dependencies]
tokio = { workspace = true, features = [ "time", "macros", "rt", "rt-multi-thread" ]}
async-std = { workspace = true, features = [ "attributes" ]}

[package.metadata.docs.rs]
all-features = false
no-default-features = true
features = ["tokio"]
