[package]
name = "async-dropper"
version = "0.3.1"
repository = "https://github.com/t3hmrman/async-dropper"
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.70"
authors = ["vados <vados@vadosware.io>"]
categories = ["asynchronous"]
description = """
The least-worst ad-hoc implementation of AsyncDrop as a Derive macro
"""

[[example]]
name = "derive-tokio"
path = "../../examples/derive_tokio.rs"
crate-type = ["bin"]
required-features = ["tokio", "derive"]

[[example]]
name = "derive-async-std"
path = "../../examples/derive_async_std.rs"
crate-type = ["bin"]
required-features = ["async-std", "derive"]

[[example]]
name = "simple-tokio"
path = "../../examples/simple_tokio.rs"
crate-type = ["bin"]
required-features = ["tokio", "simple"]

[[example]]
name = "simple-async-std"
path = "../../examples/simple_async_std.rs"
crate-type = ["bin"]
required-features = ["async-std", "simple"]

[[example]]
name = "derive-two-tokio"
path = "../../examples/derive_two_tokio.rs"
crate-type = ["bin"]
required-features = ["tokio", "derive"]

[features]
default = []
simple = []
derive = []
tokio = [
  "dep:tokio",
  "async-dropper-derive/tokio",
  "async-dropper-simple/tokio",
]
async-std = [
  "dep:async-std",
  "async-dropper-derive/async-std",
  "async-dropper-simple/async-std",
]

[dependencies]
async-trait.workspace = true
async-std = { workspace = true, optional = true }
futures.workspace = true

tokio = { workspace = true, optional = true, features = [
  "rt",
  "rt-multi-thread",
] }

# NOTE: version has to be removed if doing local dev with unpublished versions
# cargo does *not* ignore the version and opt for path
async-dropper-derive = { path = "../async-dropper-derive", version = "0.3.1" }
async-dropper-simple = { path = "../async-dropper-simple", version = "0.2.6" }

[dev-dependencies]
tokio = { workspace = true, features = [
  "time",
  "macros",
  "rt",
  "rt-multi-thread",
] }
async-std = { workspace = true, features = ["attributes"] }

[package.metadata.docs.rs]
all-features = false
no-default-features = true
features = ["tokio", "derive"]
